--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ lemlat-3-instructions\.txt
 xml-sources/
 
 lemlat-3/
+
+bibliography/
+
+LatinDeclensions\.pdf
+
+corpus/reused-texts/901-BOTS\.DATI
