--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ bibliography/
 LatinDeclensions\.pdf
 
 corpus/reused-texts/901-BOTS\.DATI
+
+corpus/reused-texts/boethius-de-trinitate\.txt\.upper
+
+ITTB/
+
+ITTB\.ods
