--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ corpus/reused-texts/boethius-de-trinitate\.txt\.upper
 ITTB/
 
 ITTB\.ods
+
+corpus/reused-texts/lat-x-bible-novavulgata\.txt
+
+corpus/reused-texts/lat-x-bible-vulgataclementina\.txt
