--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ ITTB\.ods
 corpus/reused-texts/lat-x-bible-novavulgata\.txt
 
 corpus/reused-texts/lat-x-bible-vulgataclementina\.txt
+
+ShowSpecialChars\.class
+
+ShowSpecialChars\.java
+
+symbols\.txt
