--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,15 @@ gnuplot/
 graphml/
 
 corpus-statistics/
+
+98-graphml/
+
+97-gnuplot/
+
+00-index-thomisticus/
+
+99-bibliography/
+
+corpus-lemlat/
+
+04-corpus-tracer/
