Added README file and an intial directory structure for in and output files. Directory contents are ignored in github.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .pydevproject
 .project
+00-index-thomisticus/scripts/in/*
+00-index-thomisticus/scripts/out/*
+00-index-thomisticus/scripts/tracer_data/*
+00-index-thomisticus/scripts/matches/*
+
+
