--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@
 00-index-thomisticus/scripts/matches/*
 
 
+
+98-graphml/
+
+99-bibliography/
+
+97-gnuplot/
+
+00-index-thomisticus/index-thomisticus-treebank-SCG-INCOMPLETA\.zip
+
+lemlat-3-instructions\.txt
+
+scripts/
+
+00-index-thomisticus/13-03-2017_all_resources_all_formats\.zip
+
+sunburst\.xlsx
