--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ corpus-lemlat/
 01-corpus/downloaded/
 
 04-corpus-tracer/
+
+05-results/scg-deDeoSocratis/fd0\.9-overlap3-sim0\.4/
+
+05-results/scg-deDeoSocratis/fd0\.9-overlap5-sim0\.4/
+
+BabelNetExtract/
