--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ BabelNetExtract/
 05-results/scg-deDeoSocratis\.zip
 
 05-results/scg-philosophiaeConsolationis\.zip
+
+05-results/scg-DeTrinitate\.zip
